
New find Alias dialog to find and connect to Aliases, use shortcut ctrl alt shift F

The combo box of the SQL result table find function now has an 'exact' entry.

Added SQLLite default driver definition.
 Thanks to Chris Papps

Added default driver definitions for OpenEdge and older 9.1E and 10.0B Progress databases.
 Thanks to Tinco van Engen


Bug fixes:

When column display size (ResultSetMetaData.getColumnDisplaySize()) was a very large value
 the column width in result tables turned out to be very small. Seen on Postgres.


#1317 Oracle type INTERVALDS not properly displayed
 The problem occurred when SQuirreL encountered an unknown SQL-Type and decided not to read the data,
 see menu File --> Global Preferences --> tab Data Type Controls --> Section Unknown Data Types

#1310 Mac OS installation does not run
  Separate scripts for Linux/Unix and MACOS were introduced.
  The MACOS script was adjusted according to Jörn's suggestions in bug #1310

When file is opened cursor is now positioned at the beginning of the editor.

Fixed missing text resource "Procedures" in Alias schema properties

Fixed error display when connection failed (Resource not found)


3.8.0 (08/29/2017)
==================

Enhancements:

The 'Locale' combo box at menu File --> Global Preferences --> Tab General
  now has an entry 'Don't change'. This entry may prevent translation problems
  and will be the default entry for new installations.

The format floating point numbers can now be user defined.
  See menu File --> Global Preferences --> Tab 'Data Type Controls --> section 'FLOAT, REAL, ...'

Updated French translation. Thanks to Erwan Duroselle.

The SQL result panel can now be hidden and restore by the new 'Toggle minimize results' function.
  Use ctrl shift M, tools popup or right mouse menu of SQL editor.

#555 New features for code completion needed --> Completion for UDTs
  UDT names are now available in code completion and can be configured in the Alias Properties dialog.